--- a/app/src/main/res/layout/item_pager.xml
+++ b/app/src/main/res/layout/item_pager.xml
@@ -9,10 +9,12 @@
         android:id="@+id/backgroundColor"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="#000"
+        app:cardBackgroundColor="#cccccc"
         app:cardCornerRadius="6dp"
         app:cardElevation="8dp"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        app:strokeColor="#ffd700"
+        app:strokeWidth="1dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,7 +36,7 @@
                     android:fontFamily="@font/nanumsquareeb"
                     android:gravity="center"
                     android:text="급식"
-                    android:textColor="@android:color/white"
+                    android:textColor="#000"
                     android:textSize="25sp" />
 
             </LinearLayout>
@@ -49,7 +51,7 @@
                 android:fontFamily="@font/nanumsquareb"
                 android:gravity="center"
                 android:text="식단"
-                android:textColor="#FFF"
+                android:textColor="#000000"
                 android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
