--- a/app/src/main/res/layout/item_pager.xml
+++ b/app/src/main/res/layout/item_pager.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/backgroundColor"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardBackgroundColor="#cccccc"
-        app:cardCornerRadius="6dp"
-        app:cardElevation="8dp"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        app:strokeColor="#ffd700"
+        android:theme="@style/CardTheme"
+        app:cardBackgroundColor="#d4ecff"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="0dp"
+        app:strokeColor="#ccc"
         app:strokeWidth="1dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
@@ -35,7 +36,7 @@
                     android:layout_marginBottom="2dp"
                     android:fontFamily="@font/nanumsquareeb"
                     android:gravity="center"
-                    android:text="급식"
+                    android:text="@string/nalzza_test"
                     android:textColor="#000"
                     android:textSize="25sp" />
 
@@ -50,12 +51,12 @@
                 android:layout_marginTop="12dp"
                 android:fontFamily="@font/nanumsquareb"
                 android:gravity="center"
-                android:text="식단"
+                android:text="@string/bob_test"
                 android:textColor="#000000"
-                android:textSize="16sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 
 </LinearLayout>
