--- a/app/src/main/res/layout/item_pager.xml
+++ b/app/src/main/res/layout/item_pager.xml
@@ -11,10 +11,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:theme="@style/CardTheme"
-        app:cardBackgroundColor="#d4ecff"
+        app:cardBackgroundColor="#3676e8"
         app:cardCornerRadius="10dp"
         app:cardElevation="0dp"
-        app:strokeColor="#ccc"
+        app:strokeColor="#cccccc"
         app:strokeWidth="1dp">
 
         <LinearLayout
@@ -37,7 +37,7 @@
                     android:fontFamily="@font/nanumsquareeb"
                     android:gravity="center"
                     android:text="@string/nalzza_test"
-                    android:textColor="#FFF"
+                    android:textColor="#DDD"
                     android:textSize="25sp" />
 
             </LinearLayout>
@@ -52,7 +52,7 @@
                 android:fontFamily="@font/nanumsquareb"
                 android:gravity="center"
                 android:text="@string/bob_test"
-                android:textColor="#FFF"
+                android:textColor="#EEE"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
