UPDATE : 코루틴 적용 UI 개선

--- a/app/src/main/res/layout/item_pager.xml
+++ b/app/src/main/res/layout/item_pager.xml
@@ -9,7 +9,7 @@
         android:id="@+id/backgroundColor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
         android:theme="@style/CardTheme"
         app:cardBackgroundColor="#3676e8"
         app:cardCornerRadius="10dp"
@@ -34,7 +34,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="2dp"
-                    android:fontFamily="@font/nanumsquareeb"
+                    android:fontFamily="@font/nanumsquareb"
                     android:gravity="center"
                     android:text="@string/nalzza_test"
                     android:textColor="#DDD"
